# k1_booster

./: .gitignore  README.md
docs/: 3v3_behavior_tree_analysis.md  3v3_demo_optimization.md  k1_3v3_runtime_contract.md  visionkick_optimization_strategy.md  卡尔曼滤波与地面平面拟合问题审查和优化方案.md  策略逻辑分析.md
docs/change_reports/: adjust_fallback_kick_after_retries.md  adjust_loop_escape_no_forced_kick.md  auto_visual_kick_big_shot_params.md  config_speed_more_aggressive.md  lissajous_find_ball_scan_adjust.md  rlvisionkick_entry_window_tightened.md  rlvisionkick_local_optimum_adjust.md  rollback_adjust_escape_logic.md  rollback_visual_kick_params_align_gate.md  single_robot_stable_control.md  test_as_chase_xml_plus_rlvisionkick.md  test_chase_rlvisionkick_flow.md  test_dribble_no_shoot_lost_ball_forward.md  test_dribble_uses_rlvisionkick.md  test_entry_direct_match_attack.md  test_script_remove_game_controller.md  test_scripts_vision_config_alignment.md
docs/test_records/: template.md
scripts/: assist.sh  chase.sh  shoot.sh  single_robot.sh  test.sh
src/ball_motion_predictor/: CMakeLists.txt  package.xml
src/ball_motion_predictor/include/ball_motion_predictor/: ball_motion_predictor.hpp
src/ball_motion_predictor/src/: ball_motion_predictor.cpp
src/ball_motion_predictor/test/: test_ball_motion_predictor.cpp
src/brain/behavior_trees/: chase.xml  game.xml  shoot.xml  single_robot.xml  test.xml
src/brain/config/: config.yaml
src/brain/include/: brain_tree.h  posProjector.h  types.h
src/brain/src/: brain.cpp  brain_communication.cpp  brain_log.cpp  brain_tree.cpp  locator.cpp  (+1 more)
src/vision/: CMakeLists.txt  package.xml
(+21 files in other folders)
