<?xml version="1.0"?>
<package format="3">
  <name>ball_motion_predictor</name>
  <version>0.1.0</version>
  <description>Short-horizon ball motion prediction library for vision-side ball position optimization.</description>
  <maintainer email="guwen@boosterobotics.com">Gu Wen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
